Update ICS_URL to new endpoint

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ h1 {
 
 <script src="https://cdn.jsdelivr.net/npm/ical.js/dist/ical.min.js"></script>
 <script>
-const ICS_URL = "https://cors.isomorphic-git.org/https://api.myjdwschedule.co.uk/calendars/a71ba557-a523-45d8-9775-f45fec324975.ics";
+const ICS_URL = "spoons-shifts.06allanjosh.workers.dev";
 async function loadShifts() {
   const response = await fetch(ICS_URL);
   const text = await response.text();
