--- a/index.html
+++ b/index.html
@@ -72,31 +72,49 @@ h1 {
 <script src="https://cdn.jsdelivr.net/npm/ical.js/dist/ical.min.js"></script>
 <script>
 const ICS_URL = "spoons-shifts.06allanjosh.workers.dev";
+
 async function loadShifts() {
-  const response = await fetch(ICS_URL);
-  const text = await response.text();
+  try {
+    const response = await fetch(ICS_URL);
+    const text = await response.text();
 
-  const jcalData = ICAL.parse(text);
-  const comp = new ICAL.Component(jcalData);
-  const events = comp.getAllSubcomponents("vevent");
+    const rawEvents = text.split("BEGIN:VEVENT").slice(1);
 
-  const now = new Date();
+    const now = new Date();
 
-  const shifts = events
-    .map(e => {
-      const event = new ICAL.Event(e);
-      return {
-        title: event.summary,
-        start: event.startDate.toJSDate(),
-        end: event.endDate.toJSDate()
-      };
+    const shifts = rawEvents.map(event => {
+      const summary = event.match(/SUMMARY:(.*)/)?.[1]?.trim();
+      const startRaw = event.match(/DTSTART:(.*)/)?.[1]?.trim();
+      const endRaw = event.match(/DTEND:(.*)/)?.[1]?.trim();
+
+      if (!startRaw) return null;
+
+      const start = parseICSDate(startRaw);
+      const end = parseICSDate(endRaw);
+
+      return { title: summary, start, end };
     })
-    .filter(shift => shift.start > now)
+    .filter(shift => shift && shift.start > now)
     .sort((a,b) => a.start - b.start)
     .slice(0, 4);
 
-  displayShifts(shifts);
-  startCountdown(shifts[0]);
+    displayShifts(shifts);
+    startCountdown(shifts[0]);
+
+  } catch (err) {
+    console.error("Error loading shifts:", err);
+  }
+}
+
+function parseICSDate(dateString) {
+  // Handles format like 20260222T090000Z
+  const year = dateString.substring(0,4);
+  const month = dateString.substring(4,6);
+  const day = dateString.substring(6,8);
+  const hour = dateString.substring(9,11);
+  const minute = dateString.substring(11,13);
+
+  return new Date(`${year}-${month}-${day}T${hour}:${minute}:00`);
 }
 
 function displayShifts(shifts) {
