--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ h1 {
 
 <script src="https://cdn.jsdelivr.net/npm/ical.js/dist/ical.min.js"></script>
 <script>
+  window.onerror = function(message, source, lineno, colno, error) {
+  alert("ERROR: " + message + " at line " + lineno);
+};
 const ICS_URL = "spoons-shifts.06allanjosh.workers.dev";
 
 async function loadShifts() {
