Update ICS_URL to use HTTPS

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ h1 {
   window.onerror = function(message, source, lineno, colno, error) {
   alert("ERROR: " + message + " at line " + lineno);
 };
-const ICS_URL = "spoons-shifts.06allanjosh.workers.dev";
+const ICS_URL = "https://spoons-shifts.06allanjosh.workers.dev";
 
 async function loadShifts() {
   try {
